--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,16 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
-        "symfony/config": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/filesystem": "~2.3|~3.0",
-        "symfony/yaml": "~2.3|~3.0",
+        "php": ">=7.2",
+        "symfony/config": "~5.0",
+        "symfony/dependency-injection": "~5.0",
+        "symfony/filesystem": "~5.0",
+        "symfony/yaml": "~5.0",
         "twig/twig": "3.0",
-        "jakoch/phantomjs-installer": "^3"
+        "jakoch/phantomjs-installer": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "*",
         "zendframework/zendpdf": "~2.0",
         "smalot/pdfparser": "~0.9"
     },
