--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/dependency-injection": "~5.0",
         "symfony/filesystem": "~5.0",
         "symfony/yaml": "~5.0",
-        "twig/twig": "3.0",
+        "twig/twig": "~3.0",
         "jakoch/phantomjs-installer": "~3.0"
     },
     "require-dev": {
