fix missing Twig_Loader_String, Twig_Environment and Twig Lexer in the latest version of Twig

--- a/src/JonnyW/PhantomJs/Resources/config/config.yml
+++ b/src/JonnyW/PhantomJs/Resources/config/config.yml
@@ -50,8 +50,8 @@ parameters:
 ##################
 
     phantomjs.template.template_renderer.class: JonnyW\PhantomJs\Template\TemplateRenderer
-    phantomjs.twig.environment.class: Twig_Environment
-    phantomjs.twig.lexer.class: Twig_Lexer
+    phantomjs.twig.environment.class: Twig\Environment
+    phantomjs.twig.lexer.class: Twig\Lexer
     phantomjs.twig.array_loader.class: Twig\Loader\ArrayLoader
 
 ##################
